--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="script.js"></script>
+    
     <title>Document</title>
 </head>
 <body>
-    
+    <script src="script.js"></script>
 </body>
 </html>
